[package]
name = "sui"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sui-sdk.workspace = true
thiserror.workspace = true
tracing.workspace = true
