[package]
name = "atoma-sui"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
atoma-types.workspace = true
clap.workspace = true
config.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sui-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
toml.workspace = true
